Basic sidenav components and working functionality.

--- a/projects/components-demo/src/app/app.component.html
+++ b/projects/components-demo/src/app/app.component.html
@@ -1,10 +1,18 @@
+<dp-sidenav [sideNavRef]="navContent" [openDirection]="'left'" [navWidth]="280" [duration]="0.5"></dp-sidenav>
+
+
 <div class="header-wrapper">
+  <dp-sidenav-header></dp-sidenav-header>
   <img src="assets/images/DevPro-Logo.png">
   <h1>DevPro Web Components</h1>
 </div>
 
-<dp-demo-alert></dp-demo-alert>
-<dp-demo-checkbox></dp-demo-checkbox>
+<ng-template #navContent>
+  <dp-sidenav-content [navItems]="navItems"></dp-sidenav-content>
+</ng-template>
+
+<dp-demo-alert id="alerts"></dp-demo-alert>
+<dp-demo-checkbox id="checkbox"></dp-demo-checkbox>
 <dp-demo-chip></dp-demo-chip>
 <dp-demo-date-picker></dp-demo-date-picker>
 <dp-demo-dialog></dp-demo-dialog>
@@ -14,4 +22,4 @@
 <dp-demo-select></dp-demo-select>
 <dp-demo-slide-toggle></dp-demo-slide-toggle>
 <dp-demo-spinner></dp-demo-spinner>
-<dp-demo-tabs></dp-demo-tabs>
+<dp-demo-tabs id="tabs"></dp-demo-tabs>
