Updates to sidenav content and added the rest of the fragments to demo.

--- a/projects/devpro-components/src/lib/sidenav/sidenav-header/sidenav-header.component.html
+++ b/projects/devpro-components/src/lib/sidenav/sidenav-header/sidenav-header.component.html
@@ -1,5 +1,6 @@
 <header>
-  <div class="header-menu">
-    <dp-svg class="menu-icon" iconName="info" (click)="toggleSideNav()"></dp-svg>
-  </div>
+  <dp-svg class="menu-icon"
+          iconName="menu"
+          size="xl"
+          (click)="toggleSideNav()"></dp-svg>
 </header>
