--- a/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.scss
+++ b/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.scss
@@ -2,18 +2,21 @@
   flex: 1;
 
   .sidenav-menu {
+    overflow: auto;
     list-style: none;
-    padding: 0px;
-    margin: 0px;
+    padding: 0.5rem;
+    margin: 0.5rem 0rem 0rem;
   }
 
   li {
     font-size: 1.25em;
-    margin-bottom: 32px;
+    margin-bottom: 1rem;
+    margin-left: 0.5rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  }
 
-    a {
-      color: #000;
-      text-decoration: none;
-    }
+  li:hover {
+    background-color: rgba(229, 231, 235, 1); // Gray 200
   }
 }
