--- a/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.scss
+++ b/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.scss
@@ -9,6 +9,7 @@
   }
 
   li {
+    color: rgba(75, 85, 99, 1); // Gray 600
     font-size: 1.25em;
     margin-bottom: 1rem;
     margin-left: 0.5rem;
@@ -17,6 +18,7 @@
   }
 
   li:hover {
+    color: rgba(17, 24, 39, 1); // Gray 900
     background-color: rgba(229, 231, 235, 1); // Gray 200
   }
 }
