--- a/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.html
+++ b/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.html
@@ -1,5 +1,8 @@
 <div class="sidenav-content-wrapper">
   <ul class="sidenav-menu">
-    <li *ngFor="let navItem of navItems" (click)="handleNavSelection(navItem)">{{ navItem.label }}</li>
+    <li *ngFor="let navItem of navItems" (click)="handleNavSelection(navItem)">
+      {{ navItem.label }}
+      <dp-svg iconName="angleRight"></dp-svg>
+    </li>
   </ul>
 </div>
