--- a/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.scss
+++ b/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.scss
@@ -9,16 +9,29 @@
   }
 
   li {
+    display: flex;
     color: rgba(75, 85, 99, 1); // Gray 600
     font-size: 1.25em;
     margin-bottom: 1rem;
     margin-left: 0.5rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
+
+    dp-svg {
+      flex: 1;
+      opacity: 0;
+      color: rgba(17, 24, 39, 1); // Gray 900
+      align-items: center;
+      justify-content: flex-end;
+    }
   }
 
   li:hover {
     color: rgba(17, 24, 39, 1); // Gray 900
     background-color: rgba(229, 231, 235, 1); // Gray 200
+
+    dp-svg {
+      opacity: 1;
+    }
   }
 }
