Added a header to the side nav.

--- a/projects/components-demo/src/app/app.component.html
+++ b/projects/components-demo/src/app/app.component.html
@@ -1,4 +1,7 @@
-<dp-sidenav [sideNavRef]="navContent" [openDirection]="'left'" [sideNavWidth]="280" [duration]="0.5"></dp-sidenav>
+<dp-sidenav [sideNavRef]="navContent"
+            [sideNavWidth]="280" [sideNavTitle]="'Side Navigation'"
+            [openDirection]="'left'"
+            [duration]="0.5"></dp-sidenav>
 
 
 <div class="header-wrapper">
