--- a/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.scss
+++ b/projects/devpro-components/src/lib/sidenav/sidenav-content/sidenav-content.component.scss
@@ -16,6 +16,7 @@
     margin-left: 0.5rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
+    cursor: default;
 
     dp-svg {
       flex: 1;
@@ -28,7 +29,7 @@
 
   li:hover {
     color: rgba(17, 24, 39, 1); // Gray 900
-    background-color: rgba(229, 231, 235, 1); // Gray 200
+    background-color: rgba(191, 219, 254, 1); // Blue 200
 
     dp-svg {
       opacity: 1;
