--- a/projects/devpro-components/src/lib/sidenav/sidenav.component.html
+++ b/projects/devpro-components/src/lib/sidenav/sidenav.component.html
@@ -7,13 +7,27 @@
   <div class="sidenav-menu"
        [ngStyle]="getSideNavBarStyle((isHidden | async))">
 
-    <div class="sidenav-header">
-      <div class="sidenav-title">{{ sideNavTitle }}</div>
-      <dp-svg class="sidenav-close"
-              iconName="menu"
-              size="lg"
-              (click)="onSideNavClose()"></dp-svg>
-    </div>
+    <div *ngIf="openDirection == 'left'; then leftNav else rightNav"></div>
+
+    <ng-template #leftNav>
+      <div class="sidenav-header">
+        <div class="sidenav-title">{{ sideNavTitle }}</div>
+        <dp-svg class="sidenav-close"
+                iconName="menu"
+                size="lg"
+                (click)="onSideNavClose()"></dp-svg>
+      </div>
+    </ng-template>
+
+    <ng-template #rightNav>
+      <div class="sidenav-header">
+        <dp-svg class="sidenav-close"
+                iconName="menu"
+                size="lg"
+                (click)="onSideNavClose()"></dp-svg>
+        <div class="sidenav-title">{{ sideNavTitle }}</div>
+      </div>
+    </ng-template>
 
     <div class="sidenav-content">
       <ng-container *ngTemplateOutlet="sideNavRef"></ng-container>
