Changed demos to utilize component button instead of HTML button.

--- a/projects/components-demo/src/app/demo-alert/demo-alert.component.html
+++ b/projects/components-demo/src/app/demo-alert/demo-alert.component.html
@@ -2,6 +2,6 @@
   <div class="demo-title">Alerts</div>
   <div class="demo-border">
     <dp-alerts></dp-alerts>
-    <button class="btn btn-blue" (click)="clear()">Clear All</button>
+    <dp-button (click)="clear()">Clear All</dp-button>
   </div>
 </div>
