--- a/projects/components-demo/src/app/demo-date-picker/demo-date-picker.component.html
+++ b/projects/components-demo/src/app/demo-date-picker/demo-date-picker.component.html
@@ -9,13 +9,13 @@
     <div class="demo-errors" *ngIf="errors">{{errors}}</div>
 
     <div style="margin-top: 1rem; margin-bottom: 1rem;">
-      <button class="btn btn-blue" *ngIf="this.formControl.disabled" (click)="enable()">Enable</button>
-      <button class="btn btn-blue" *ngIf="!this.formControl.disabled" (click)="disable()">Disable</button>
-      <button class="btn btn-red" (click)="error()">Error</button>
+      <dp-button *ngIf="this.formControl.disabled" (click)="enable()">Enable</dp-button>
+      <dp-button *ngIf="!this.formControl.disabled" (click)="disable()">Disable</dp-button>
+      <dp-button color="red" (click)="error()">Error</dp-button>
     </div>
 
     <div class="demo-value">
-      Value: {{formControl.value}}
+      Value: {{ formControl.value }}
     </div>
   </div>
 </div>
