--- a/projects/components-demo/src/app/demo-dialog/demo-dialog.component.html
+++ b/projects/components-demo/src/app/demo-dialog/demo-dialog.component.html
@@ -2,6 +2,6 @@
   <div class="demo-title">Dialog</div>
 
   <div class="demo-border">
-    <button class="btn btn-blue" (click)="openDialog()">Open dialog</button>
+    <dp-button (click)="openDialog()">Open Dialog</dp-button>
   </div>
 </div>
