--- a/projects/components-demo/src/app/demo-radio-button/demo-radio-button.component.scss
+++ b/projects/components-demo/src/app/demo-radio-button/demo-radio-button.component.scss
@@ -2,7 +2,8 @@ dp-radio-button {
   display: block;
 }
 
-button {
+dp-button {
+  display: inline-flex;
   margin-top: 0.5rem;
   margin-right: 0.5rem;
 }
