--- a/projects/components-demo/src/app/demo-spinner/demo-spinner.component.html
+++ b/projects/components-demo/src/app/demo-spinner/demo-spinner.component.html
@@ -6,27 +6,27 @@
       <div style="margin-top: 1rem;">
         <div style="display: block" class="centered">Buttons (w/ Changed Colors)</div>
         <div style="display: block" class="centered">
-          <button class="btn btn-blue">
+          <dp-button>
             <dp-spinner size="xs" color="white"></dp-spinner>
-          </button>
-          <button style="margin-left: 0.5rem" class="btn btn-blue">
+          </dp-button>
+          <dp-button style="margin-left: 0.5rem">
             <dp-spinner size="xs" spinnerStyle="style2" color="white"></dp-spinner>
-          </button>
-          <button style="margin-left: 0.5rem" class="btn btn-blue">
+          </dp-button>
+          <dp-button style="margin-left: 0.5rem">
             <dp-spinner size="xs" spinnerStyle="style3" color="white"></dp-spinner>
-          </button>
+          </dp-button>
         </div>
 
         <div style="display:block; margin-top: 0.5rem;" class="centered">
-          <button class="btn btn-red">
+          <dp-button color="red">
             <dp-spinner size="xs" color="white"></dp-spinner>
-          </button>
-          <button style="margin-left: 0.5rem" class="btn btn-red">
+          </dp-button>
+          <dp-button style="margin-left: 0.5rem" color="red">
             <dp-spinner size="xs" spinnerStyle="style2" color="white"></dp-spinner>
-          </button>
-          <button style="margin-left: 0.5rem" class="btn btn-red">
+          </dp-button>
+          <dp-button style="margin-left: 0.5rem" color="red">
             <dp-spinner size="xs" spinnerStyle="style3" color="white"></dp-spinner>
-          </button>
+          </dp-button>
         </div>
       </div>
 
