--- a/projects/components-demo/src/app/random-component/random-component.component.html
+++ b/projects/components-demo/src/app/random-component/random-component.component.html
@@ -6,6 +6,6 @@
 </dp-dialog-body>
 <dp-dialog-footer>
   <div class="button-wrapper">
-    <button class="btn btn-blue" (click)="closeDialog()">Close</button>
+    <dp-button (click)="closeDialog()">Close</dp-button>
   </div>
 </dp-dialog-footer>
