Added button demo.

--- a/projects/components-demo/src/app/app.component.html
+++ b/projects/components-demo/src/app/app.component.html
@@ -10,6 +10,7 @@
 </div>
 
 <dp-demo-alert id="alerts"></dp-demo-alert>
+<demo-button id="buttons"></demo-button>
 <dp-demo-checkbox id="checkboxes"></dp-demo-checkbox>
 <dp-demo-chip id="chip"></dp-demo-chip>
 <dp-demo-date-picker id="date-picker"></dp-demo-date-picker>
