Added inversion/stroke option to buttons.

--- a/projects/components-demo/src/app/demo-button/demo-button.component.scss
+++ b/projects/components-demo/src/app/demo-button/demo-button.component.scss
@@ -1,10 +1,10 @@
 dp-button {
   display: block;
-  //margin-top: 1rem;
 }
 
 .demo-wrapper {
   display: block;
+  flex: 1 1 0%;
 }
 
 .btn-group {
