--- a/projects/components-demo/src/app/demo-button/demo-button.component.html
+++ b/projects/components-demo/src/app/demo-button/demo-button.component.html
@@ -36,6 +36,27 @@
           </dp-button>
         </div>
       </div>
+
+
+
+
+
+
+
+      <div class="btn-group">
+        <div class="demo-subtitle">Inverted</div>
+        <div class="btn-example">
+          <dp-button color="blue" inverted="true">Blue Example</dp-button>
+          <dp-button color="blue" inverted="true" disabled="true">Disabled Example</dp-button>
+        </div>
+      </div>
+
+      <div style="margin: 0.5rem;"></div> <!-- Spacer -->
+
+      <div class="btn-example">
+        <dp-button color="red" inverted="true">Red Example</dp-button>
+        <dp-button color="red" inverted="true" disabled="true">Disabled Example</dp-button>
+      </div>
     </div>
 
   </div>
