Added raised button styling.

--- a/projects/components-demo/src/app/demo-button/demo-button.component.html
+++ b/projects/components-demo/src/app/demo-button/demo-button.component.html
@@ -38,26 +38,38 @@
       </div>
 
 
-
-
-
-
-
       <div class="btn-group">
-        <div class="demo-subtitle">Inverted</div>
+        <div class="demo-subtitle">Stroke</div>
         <div class="btn-example">
-          <dp-button color="blue" inverted="true">Blue Example</dp-button>
-          <dp-button color="blue" inverted="true" disabled="true">Disabled Example</dp-button>
+          <dp-button color="blue" stroked="true">Blue Example</dp-button>
+          <dp-button color="blue" stroked="true" disabled="true">Disabled Example</dp-button>
         </div>
       </div>
 
       <div style="margin: 0.5rem;"></div> <!-- Spacer -->
 
       <div class="btn-example">
-        <dp-button color="red" inverted="true">Red Example</dp-button>
-        <dp-button color="red" inverted="true" disabled="true">Disabled Example</dp-button>
+        <dp-button color="red" stroked="true">Red Example</dp-button>
+        <dp-button color="red" stroked="true" disabled="true">Disabled Example</dp-button>
       </div>
     </div>
 
+
+    <div class="btn-group">
+      <div class="demo-subtitle">Raised</div>
+      <div class="btn-example">
+        <dp-button color="blue" raised="true">Blue Example</dp-button>
+        <dp-button color="blue" raised="true" stroked="true" disabled="true">Disabled Example</dp-button>
+      </div>
+    </div>
+
+    <div style="margin: 0.5rem;"></div> <!-- Spacer -->
+
+    <div class="btn-example">
+      <dp-button color="red" raised="true">Red Example</dp-button>
+      <dp-button color="red" raised="true" stroked="true" disabled="true">Disabled Example</dp-button>
+    </div>
   </div>
-</div>
+
+
+  </div>
