--- a/projects/components-demo/src/app/demo-alert/demo-alert.component.html
+++ b/projects/components-demo/src/app/demo-alert/demo-alert.component.html
@@ -2,6 +2,6 @@
   <div class="demo-title">Alerts</div>
   <div class="demo-border">
     <dp-alerts></dp-alerts>
-    <dp-button (click)="clear()">Clear All</dp-button>
+    <dp-button color="primary" (click)="clear()">Clear All</dp-button>
   </div>
 </div>
