--- a/projects/components-demo/src/app/demo-checkbox/demo-checkbox.component.html
+++ b/projects/components-demo/src/app/demo-checkbox/demo-checkbox.component.html
@@ -16,9 +16,9 @@
         </div>
 
         <div style="margin-top: 1rem; margin-bottom: 1rem;">
-          <dp-button *ngIf="this.formControlGroup.disabled" (click)="enableGroup()">Enable</dp-button>
-          <dp-button *ngIf="!this.formControlGroup.disabled" (click)="disableGroup()">Disable</dp-button>
-          <dp-button color="red" (click)="errorGroup()">Error</dp-button>
+          <dp-button color="primary" *ngIf="this.formControlGroup.disabled" (click)="enableGroup()">Enable</dp-button>
+          <dp-button color="primary" *ngIf="!this.formControlGroup.disabled" (click)="disableGroup()">Disable</dp-button>
+          <dp-button color="secondary" (click)="errorGroup()">Error</dp-button>
         </div>
       </div>
 
@@ -37,9 +37,9 @@
         </div>
 
         <div style="margin-top: 1rem; margin-bottom: 1rem;">
-          <dp-button *ngIf="this.formControlSingle.disabled" (click)="enableSingle()">Enable</dp-button>
-          <dp-button *ngIf="!this.formControlSingle.disabled" (click)="disableSingle()">Disable</dp-button>
-          <dp-button color="red" (click)="errorSingle()">Error</dp-button>
+          <dp-button color="primary" *ngIf="this.formControlSingle.disabled" (click)="enableSingle()">Enable</dp-button>
+          <dp-button color="primary" *ngIf="!this.formControlSingle.disabled" (click)="disableSingle()">Disable</dp-button>
+          <dp-button color="secondary" (click)="errorSingle()">Error</dp-button>
         </div>
       </div>
     </div>
