--- a/projects/components-demo/src/app/demo-date-picker/demo-date-picker.component.html
+++ b/projects/components-demo/src/app/demo-date-picker/demo-date-picker.component.html
@@ -9,9 +9,9 @@
     <div class="demo-errors" *ngIf="errors">{{errors}}</div>
 
     <div style="margin-top: 1rem; margin-bottom: 1rem;">
-      <dp-button *ngIf="this.formControl.disabled" (click)="enable()">Enable</dp-button>
-      <dp-button *ngIf="!this.formControl.disabled" (click)="disable()">Disable</dp-button>
-      <dp-button color="red" (click)="error()">Error</dp-button>
+      <dp-button color="primary" *ngIf="this.formControl.disabled" (click)="enable()">Enable</dp-button>
+      <dp-button color="primary" *ngIf="!this.formControl.disabled" (click)="disable()">Disable</dp-button>
+      <dp-button color="secondary" (click)="error()">Error</dp-button>
     </div>
 
     <div class="demo-value">
