--- a/projects/components-demo/src/app/demo-spinner/demo-spinner.component.html
+++ b/projects/components-demo/src/app/demo-spinner/demo-spinner.component.html
@@ -6,25 +6,25 @@
       <div style="margin-top: 1rem;">
         <div style="display: block" class="centered">Buttons (w/ Changed Colors)</div>
         <div style="display: block" class="centered">
-          <dp-button>
+          <dp-button color="primary">
             <dp-spinner size="xs" color="white"></dp-spinner>
           </dp-button>
-          <dp-button style="margin-left: 0.5rem">
+          <dp-button color="primary" style="margin-left: 0.5rem">
             <dp-spinner size="xs" spinnerStyle="style2" color="white"></dp-spinner>
           </dp-button>
-          <dp-button style="margin-left: 0.5rem">
+          <dp-button color="primary" style="margin-left: 0.5rem">
             <dp-spinner size="xs" spinnerStyle="style3" color="white"></dp-spinner>
           </dp-button>
         </div>
 
         <div style="display:block; margin-top: 0.5rem;" class="centered">
-          <dp-button color="red">
+          <dp-button color="secondary">
             <dp-spinner size="xs" color="white"></dp-spinner>
           </dp-button>
-          <dp-button style="margin-left: 0.5rem" color="red">
+          <dp-button style="margin-left: 0.5rem" color="secondary">
             <dp-spinner size="xs" spinnerStyle="style2" color="white"></dp-spinner>
           </dp-button>
-          <dp-button style="margin-left: 0.5rem" color="red">
+          <dp-button style="margin-left: 0.5rem" color="secondary">
             <dp-spinner size="xs" spinnerStyle="style3" color="white"></dp-spinner>
           </dp-button>
         </div>
