--- a/projects/components-demo/src/app/demo-button/demo-button.component.html
+++ b/projects/components-demo/src/app/demo-button/demo-button.component.html
@@ -6,13 +6,13 @@
       <tr>
         <th><!-- PLACEHOLDER --></th>
         <th>Basic</th>
-        <th>Primary</th>
-        <th>Secondary</th>
-        <th>Disabled</th>
+        <th class="primary">Primary</th>
+        <th class="secondary">Secondary</th>
+        <th class="disabled">Disabled</th>
       </tr>
 
-      <tr>
-        <td>Raised</td>
+      <tr class="btn-row">
+        <td class="raised">Raised</td>
         <td> <dp-button raised="true">Basic</dp-button> </td>
         <td> <dp-button raised="true" color="primary">Primary</dp-button> </td>
         <td> <dp-button raised="true" color="secondary">Secondary</dp-button> </td>
@@ -28,7 +28,7 @@
       </tr>
 
       <tr>
-        <td>Stroked</td>
+        <td class="stroked">Stroked</td>
         <td> <dp-button stroked="true">Basic</dp-button> </td>
         <td> <dp-button stroked="true" color="primary">Primary</dp-button>
         </td>
