--- a/projects/components-demo/src/app/demo-spinner/demo-spinner.component.scss
+++ b/projects/components-demo/src/app/demo-spinner/demo-spinner.component.scss
@@ -16,12 +16,8 @@
   grid-auto-flow: column;
   grid-template-columns: repeat(4, minmax(0, 1fr));
   grid-template-rows: repeat(5, minmax(0, 1fr));
-
-  border-right-width: calc(1px * 0);
-  border-left-width: calc(1px * calc(1 - 0));
-
-  border-top-width: calc(1px * calc(1 - 0));
-  border-bottom-width: calc(1px * 0);
-
+  
+  border-left-width: 1px;
+  border-top-width: 1px;
   border-color: rgba(209, 213, 219, 1); // Gray 300
 }
