Changed stroke background color to transparent instead of white.

--- a/projects/devpro-components/src/lib/button/button.component.scss
+++ b/projects/devpro-components/src/lib/button/button.component.scss
@@ -82,7 +82,7 @@
 
 // Stroke //
 :host[stroked='true'] .button-wrapper {
-  background-color: white;
+  background-color: transparent;
   border-width: 1px;
   border-style: solid;
 }
