Basic framework for setup page and routing.

--- a/projects/components-demo/src/app/app.component.html
+++ b/projects/components-demo/src/app/app.component.html
@@ -1,29 +1,30 @@
 <app-navigation></app-navigation>
 
-<router-outlet></router-outlet>
+<div class="router-content">
+  <router-outlet></router-outlet>
+</div>
 
 
+<!--<dp-sidenav [sideNavRef]="navContent"-->
+<!--            [sideNavWidth]="280" [sideNavTitle]="'Side Navigation'"-->
+<!--            [openDirection]="'left'"-->
+<!--            [duration]="0.5"></dp-sidenav>-->
 
-<dp-sidenav [sideNavRef]="navContent"
-            [sideNavWidth]="280" [sideNavTitle]="'Side Navigation'"
-            [openDirection]="'left'"
-            [duration]="0.5"></dp-sidenav>
 
+<!--<dp-demo-alert id="alerts"></dp-demo-alert>-->
+<!--<demo-button id="buttons"></demo-button>-->
+<!--<dp-demo-checkbox id="checkboxes"></dp-demo-checkbox>-->
+<!--<dp-demo-chip id="chip"></dp-demo-chip>-->
+<!--<dp-demo-date-picker id="date-picker"></dp-demo-date-picker>-->
+<!--<dp-demo-dialog id="dialog"></dp-demo-dialog>-->
+<!--<dp-demo-multiselect id="multiselect"></dp-demo-multiselect>-->
+<!--<dp-demo-overflow-menu id="overflow-menu"></dp-demo-overflow-menu>-->
+<!--<dp-demo-radio-button id="radio-button"></dp-demo-radio-button>-->
+<!--<dp-demo-select id="select"></dp-demo-select>-->
+<!--<dp-demo-slide-toggle id="slide-toggle"></dp-demo-slide-toggle>-->
+<!--<dp-demo-spinner id="spinner"></dp-demo-spinner>-->
+<!--<dp-demo-tabs id="tabs"></dp-demo-tabs>-->
 
-<dp-demo-alert id="alerts"></dp-demo-alert>
-<demo-button id="buttons"></demo-button>
-<dp-demo-checkbox id="checkboxes"></dp-demo-checkbox>
-<dp-demo-chip id="chip"></dp-demo-chip>
-<dp-demo-date-picker id="date-picker"></dp-demo-date-picker>
-<dp-demo-dialog id="dialog"></dp-demo-dialog>
-<dp-demo-multiselect id="multiselect"></dp-demo-multiselect>
-<dp-demo-overflow-menu id="overflow-menu"></dp-demo-overflow-menu>
-<dp-demo-radio-button id="radio-button"></dp-demo-radio-button>
-<dp-demo-select id="select"></dp-demo-select>
-<dp-demo-slide-toggle id="slide-toggle"></dp-demo-slide-toggle>
-<dp-demo-spinner id="spinner"></dp-demo-spinner>
-<dp-demo-tabs id="tabs"></dp-demo-tabs>
-
-<ng-template #navContent>
-  <dp-sidenav-content [navItems]="navItems"></dp-sidenav-content>
-</ng-template>
+<!--<ng-template #navContent>-->
+<!--  <dp-sidenav-content [navItems]="navItems"></dp-sidenav-content>-->
+<!--</ng-template>-->
