--- a/projects/components-demo/src/app/navigation/navigation.component.html
+++ b/projects/components-demo/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="headers">
-    <a>Getting Started</a>
+    <a routerLink="/setup">Getting Started</a>
     <a>Examples</a>
     <a href="https://dev-pro.ca/en/">About Us</a>
   </div>
