--- a/projects/components-demo/src/styles.scss
+++ b/projects/components-demo/src/styles.scss
@@ -3,6 +3,12 @@
   "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.router-content {
+  margin-top: 6rem; // Stops overlap with navbar.
+}
+
+
+
 
 
 
