--- a/projects/components-demo/src/app/navigation/navigation.component.html
+++ b/projects/components-demo/src/app/navigation/navigation.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar">
   <div class="logo">
-    <dp-sidenav-header class="sidenav-menu-button"></dp-sidenav-header>
     <img src="assets/images/DevPro-Logo.png">
     <span>DevPro Web Components</span>
   </div>
 
   <div class="headers">
     <a routerLink="/setup">Getting Started</a>
-    <a>Examples</a>
     <a href="https://dev-pro.ca/en/">About Us</a>
   </div>
 </nav>
+
+<app-sidenav></app-sidenav>
