Fixed remnant code from previous library build.

--- a/projects/components-demo/src/app/setup/setup.component.html
+++ b/projects/components-demo/src/app/setup/setup.component.html
@@ -21,7 +21,8 @@
 
   <div>
     <h2>Styles</h2>
-    EXPLANATION
+    The library utilizes two css dependencies. First, <code>base.scss</code> which contains the base styling for all
+    components. Second, <code>input.scss</code> which is utilized in the co
     CODEBLOCK
   </div>
 
