--- a/projects/devpro-components/assets/styles/base.css
+++ b/projects/devpro-components/assets/styles/base.css
@@ -1,4 +1,23 @@
-.tw-input {
+* {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: #e2e8f0;
+}
+
+button {
+  font-size: 100%;
+  background-color: transparent;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* Input Styling */
+.dp-input {
   appearance: none;
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -8,35 +27,35 @@
   width: 100%;
   font-size: 0.875rem;
   line-height: 1.25rem;
-  background-color: white;
+  background-acolor: white;
   border-width: 1px;
   border-style: solid;
-  border-color: rgba(156, 163, 175, 1); // Gray 400
+  border-color: rgba(156, 163, 175, 1); /* Gray 400 */
   border-radius: 0.25rem;
-  color: rgba(17, 24, 39, 1); // Gray 900
+  color: rgba(17, 24, 39, 1); /* Gray 900 */
   box-sizing: border-box;
   transition: border-color 150ms ease-in, box-shadow 150ms ease-in;
 }
 
-.tw-input-focus {
+.dp-input-focus {
   box-shadow: 0px 0px 0px 3px rgba(66, 153, 225, 0.35);
-  border-color: rgba(59, 130, 246, 1); // Blue 500
+  border-color: rgba(59, 130, 246, 1); /* Blue 500 */
 }
 
-.tw-input-error {
+.dp-input-error {
   box-shadow: 0px 0px 0px 3px rgba(245, 101, 101, 0.35);
-  border-color: rgba(239, 68, 68, 1); // Red 500
+  border-color: rgba(239, 68, 68, 1); /* Red 500 */
 }
 
-.tw-input-disabled {
-  background-color: rgba(229, 231, 235, 1); // Gray 200
-  color: rgba(75, 85, 99, 1); // Gray 600
+.dp-input-disabled {
+  background-color: rgba(229, 231, 235, 1); /* Gray 200 */
+  color: rgba(75, 85, 99, 1); /* Gray 600 */
   outline: 2px solid transparent;
   outline-offset: 2px;
   pointer-events: none;
 }
 
-.tw-input:disabled {
+.dp-input:disabled {
   background-color: rgba(229, 231, 235, 1);
   color: rgba(75, 85, 99, 1);
   outline: 2px solid transparent;
@@ -44,7 +63,7 @@
   pointer-events: none;
 }
 
-.tw-input:focus {
+.dp-input:focus {
   box-shadow: 0px 0px 0px 3px rgba(66, 153, 225, 0.35);
   border-color: rgba(59, 130, 246, 1);
 }
