--- a/projects/devpro-components/src/lib/date-picker/date-picker.component.html
+++ b/projects/devpro-components/src/lib/date-picker/date-picker.component.html
@@ -1,8 +1,8 @@
 <div class="input-wrapper"
-     [class.tw-input]="true"
-     [class.tw-input-disabled]="disabled"
-     [class.tw-input-error]="error"
-     [class.tw-input-focus]="focused">
+     [class.dp-input]="true"
+     [class.dp-input-disabled]="disabled"
+     [class.dp-input-error]="error"
+     [class.dp-input-focus]="focused">
   <input #ref
          (focusin)="handleFocus()"
          (focusout)="handleUnfocus()"
