--- a/projects/devpro-components/src/lib/select/select.component.html
+++ b/projects/devpro-components/src/lib/select/select.component.html
@@ -2,10 +2,10 @@
            (opened)="handleOpen()"
            (closed)="handleClose()">
   <div class="select"
-       [class.tw-input]="true"
-       [class.tw-input-disabled]="disabled"
-       [class.tw-input-error]="error"
-       [class.tw-input-focus]="focused">
+       [class.dp-input]="true"
+       [class.dp-input-disabled]="disabled"
+       [class.dp-input-error]="error"
+       [class.dp-input-focus]="focused">
     <div class="selected-item-wrapper">
       <span class="placeholder" *ngIf="!filtering && !hasValue() && placeholder">{{placeholder}}</span>
       <span *ngIf="!filtering && !multiselect">{{singleSelectValueLabel}}</span>
