--- a/projects/components-demo/src/app/codeblock/codeblock.component.scss
+++ b/projects/components-demo/src/app/codeblock/codeblock.component.scss
@@ -1,8 +1,9 @@
-code {
+.code-wrapper {
   display: block;
   border-width: 0 0 0 0.75rem;
   border-style: solid;
   border-color: #9999;
-  background-color: #eee;
-  padding: 1rem;
+  background-color: #EEEEEE;
+  padding-bottom: 1rem;
+  font-family: Consolas, "courier new";
 }
