--- a/projects/components-demo/src/app/codeblock/codeblock.component.scss
+++ b/projects/components-demo/src/app/codeblock/codeblock.component.scss
@@ -1,5 +1,10 @@
+* {
+  white-space: pre;
+}
+
 .code-wrapper {
   display: block;
+  margin: 1rem;
   border-width: 0 0 0 0.75rem;
   border-style: solid;
   border-color: #9999;
