--- a/projects/components-demo/src/app/demo-checkbox/demo-checkbox.component.scss
+++ b/projects/components-demo/src/app/demo-checkbox/demo-checkbox.component.scss
@@ -1,11 +1,11 @@
-.spacer {
-  margin: 0.5rem;
-}
-
 dp-button {
   margin-right: 0.5rem;
 }
 
 dp-checkbox {
   display: block;
+}
+
+td:first-child {
+  font-family: Consolas, "courier new";
 }
