--- a/projects/components-demo/src/app/setup/setup.component.html
+++ b/projects/components-demo/src/app/setup/setup.component.html
@@ -2,7 +2,7 @@
   <h1>Getting Started</h1>
 
   <div>
-    <h2>Download</h2>
+    <h3>Download</h3>
     <p class="desc">
       DevPro components are available through NPM, once your application is setup run the following commands to install
       the library into your project:
@@ -11,7 +11,7 @@
   </div>
 
   <div>
-    <h2>Import</h2>
+    <h3>Import</h3>
     <p class="desc">
       All components are currently exported by the <code>DevproComponentsModule</code> and can be imported by adding the following
       line in your <code>app.module.ts</code> file.
@@ -20,15 +20,15 @@
   </div>
 
   <div>
-    <h2>Styles</h2>
+    <h3>Styles</h3>
     <p class="desc">The library requires a base css dependency.
-      Import the <code>base.scss</code> file into your projects angular.json:
+      Import the <code>base.css</code> file into your projects angular.json:
     </p>
     <app-codeblock>{{ codeStyles }}</app-codeblock>
   </div>
 
   <div>
-    <h2>Animations</h2>
+    <h3>Animations</h3>
     <p class="desc">
       Some components utilize Angular animations. Import the <code>BrowserAnimationsModule</code> into your application
       module.
@@ -37,7 +37,7 @@
   </div>
 
   <div>
-    <h2>Peer Dependencies</h2>
+    <h3>Peer Dependencies</h3>
     <p class="desc">
       Some components rely on third party dependencies, the following will be installed as peer dependencies when
       installing the library.
