--- a/projects/components-demo/src/app/demo-checkbox/demo-checkbox.component.html
+++ b/projects/components-demo/src/app/demo-checkbox/demo-checkbox.component.html
@@ -72,7 +72,7 @@
           <td>disabled</td>
           <td>boolean</td>
           <td>false</td>
-          <td>Disabled attribute of the checkbox, when true will visibly change the checkbox and make it un-clickable.</td>
+          <td>Disabled attribute of the checkbox, when true it will visibly change the checkbox and make it un-clickable.</td>
         </tr>
       </table>
 
