--- a/projects/components-demo/src/styles.scss
+++ b/projects/components-demo/src/styles.scss
@@ -43,6 +43,7 @@ th, td {
   padding: 1.5rem;
   border-color: rgba(229, 231, 235, 1);
   border-style: solid;
+  box-shadow: 2px 2px 3px 0 #9999;
 
   h4 {
     margin-bottom: 1rem;
