Overflow Menu Demo

--- a/projects/components-demo/src/app/demos/demo-date-picker/demo-date-picker.component.html
+++ b/projects/components-demo/src/app/demos/demo-date-picker/demo-date-picker.component.html
@@ -106,7 +106,9 @@
       <p>None.</p>
 
       <h3>Dependencies</h3>
-      <p><a href="https://moment.github.io/luxon/index.html">Luxon</a> DateTime</p>
+      <p>Date validation and formatting are handled by the <a href="https://moment.github.io/luxon/index.html">Luxon</a>.</p>
+      <p>The calendar utilizes a <code>PopperComponent</code> that requires the
+        <a href="https://popper.js.org/">Popper.js</a> dependency.</p>
     </dp-tab>
 
     <dp-tab label="Source Code">
