--- a/projects/components-demo/src/styles.scss
+++ b/projects/components-demo/src/styles.scss
@@ -50,6 +50,7 @@ td:first-child {
   box-shadow: 2px 2px 3px 0 #9999;
 
   h4 {
+    margin-top: 0.5rem;
     margin-bottom: 1rem;
     font-weight: 500;
 
